--- a/style.css
+++ b/style.css
@@ -2,18 +2,20 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
 }
-.container{
-    
+body{
+    background-color: #f4ebdc;
+}
+.container{ 
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
     max-width: 80%;
     margin: 0 auto;
 }
-
 .blox1,.blox2,.blox3{
-
     flex-grow: 1;
     font-size: 30px;
     color: white;
@@ -24,34 +26,30 @@
     width: 300px;
     height: 50px;
     text-align: center;
-    
 }
-
 .logo{
-    height: 120px;
-    width: 130px;
-    margin: 10px;
+    width: 250px;
 }
-
+.logo2{
+    
+    width: 130px;
+    padding: 20px;
+}
 .footer{
     display: flex;
     justify-content: space-between;
-    padding: 40px;
+    padding: 0px 40px;
     color: white;
     background-color: rgb(63, 58, 75); 
-    height: 200px;
     text-align: start;
     align-items: center;
     width: 100%;
-    bottom: 0;
-    position: fixed;
-
 }
-
-.child p{
-    font-size: 24px;
-    text-align: center;
-    margin-top: 50px;
+.child{
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    padding-top: 10px;
 }
 .child2{
     display: flex;
@@ -62,12 +60,9 @@
     display: flex;
     gap: 25px;
     text-align: center;
-    align-items: center;
-    
+    align-items: center; 
 }
-
 button{
-
     padding: 10px;
     border: 1px solid black;
     border-radius: 10px;
@@ -76,10 +71,46 @@ button{
     padding-bottom: 15px;
 }
 .img1{
-    height: 120px;
+    height: 150px;
     width: 150px;
 }
 .img2{
-    height: 180px;
+    height: 150px;
     width: 190px;
 }
+#wrap {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    align-items: center;
+    width: 100%;
+    height: 50px;
+    margin: 0;
+    z-index: 99;
+    position: relative;
+    
+}
+.header_background{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-image: url("./assets/Header_Background.png");
+    height: 100vh;
+    width: 100vw;
+    margin: 0 auto;
+}
+.navbar{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 15px;
+    border: 1px solid white ;
+    border-radius: 10px ;
+    background-color: white;
+    width: 250px;
+    height: 25px;
+    
+}
+
+F4EBDC
