--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@
     list-style: none;
     text-decoration: none;
 }
+html{
+    scroll-behavior: smooth;
+}
 body{
     background-color: #f4ebdc;
 }
@@ -91,6 +94,9 @@ button{
     justify-content: space-around;
     align-items: center;
     background-image: url("./assets/Header_Background.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
     height: 100vh;
     width: 100vw;
     margin: 0 auto;
@@ -116,9 +122,11 @@ button{
 .h1{
     margin-top: 25px;
     color: brown;
+    text-align: center;
 }
 .container{
     display: flex;
+    justify-content: center;
     align-items: center;
     margin: 0 auto;
     padding: 15px;
@@ -143,5 +151,60 @@ button{
 .banner img{
     width: 100%;
 }
+.banner{
+    width: 100vw;
+}
+button{
+    position: fixed;
+    right: 5px;
+    bottom: 5px;
+    left: 88%;
+}
+button a{
+    color: black;
+}
+button a:hover{
+        color: brown;
+}
+
+@media screen and (max-width: 800px) {
+    *{
+        padding: 0;
+    }
+    .container {
+      flex-direction: column;
+      padding: 15px;
+    }
+    .container img{
+        width: 88%;
+    }
+    .text-box{
+        width: 88%;
+        padding: 20px 0;
+        font-size: 15px;
+        text-align: center;
+    }
+    .header_background{
+        background-size: cover;
+        padding: 20px;
+    }
+    .header_background h1{
+        font-size: 20px;
+    }
+    .footer{
+        flex-direction: column;
+        font-size: 15px;
+        gap: 15px;
+    }
+    .child .bloc{
+        flex-direction: column;
+    }
+    button{
+        left: 53%;
+    }
+}
+
+
 
 F4EBDC
+Goûtez la Couronne à domicile
