--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ html{
 }
 body{
     background-color: #f4ebdc;
+    max-width: 1440px;
 }
 .blox1,.blox2,.blox3{
     flex-grow: 1;
@@ -168,7 +169,36 @@ button a{
 button a:hover{
         color: brown;
 }
-
+.form{
+    box-shadow: rgba(99,99,99,0.5) 0px 2px 8px 0px;
+    border-radius: 10px;
+    background-color: #f4ebdc;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 80%;
+    width: 50%;
+    padding: 40px 0;
+    gap: 40px;
+}
+.form-body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    background-image: url(./assets/desktop/backrgound-form2.png);
+    background-position: center;
+    background-size: cover;
+    backdrop-filter: blur(2px);
+}
+.form-example{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    gap: 10px;
+}
 @media screen and (max-width: 800px) {
     *{
         padding: 0;
@@ -204,9 +234,10 @@ button a:hover{
     button{
         left: 53%;
     }
+    .form{
+        width: 75%;
+    }
+    .form-example{
+       text-align: center;
+    }
 }
-
-
-
-F4EBDC
-Goûtez la Couronne à domicile
